; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_fchmodat.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_fchmodat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }

@MAX_PATH = common dso_local global i32 0, align 4
@_EFAULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"fchmodat(%d, \22%s\22, %o)\00", align 1
@_EBADF = common dso_local global i32 0, align 4
@S_IFMT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_fchmodat(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.fd*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %12 = load i32, i32* @MAX_PATH, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %8, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %9, align 8
  %16 = load i32, i32* %6, align 4
  %17 = trunc i64 %13 to i32
  %18 = call i64 @user_read_string(i32 %16, i8* %15, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %3
  %21 = load i32, i32* @_EFAULT, align 4
  store i32 %21, i32* %4, align 4
  store i32 1, i32* %10, align 4
  br label %42

22:                                               ; preds = %3
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @STRACE(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %23, i8* %15, i32 %24)
  %26 = load i32, i32* %5, align 4
  %27 = call %struct.fd* @at_fd(i32 %26)
  store %struct.fd* %27, %struct.fd** %11, align 8
  %28 = load %struct.fd*, %struct.fd** %11, align 8
  %29 = icmp eq %struct.fd* %28, null
  br i1 %29, label %30, label %32

30:                                               ; preds = %22
  %31 = load i32, i32* @_EBADF, align 4
  store i32 %31, i32* %4, align 4
  store i32 1, i32* %10, align 4
  br label %42

32:                                               ; preds = %22
  %33 = load i32, i32* @S_IFMT, align 4
  %34 = xor i32 %33, -1
  %35 = load i32, i32* %7, align 4
  %36 = and i32 %35, %34
  store i32 %36, i32* %7, align 4
  %37 = load %struct.fd*, %struct.fd** %11, align 8
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* %7, align 4
  %40 = call i32 @make_attr(i32 %38, i32 %39)
  %41 = call i32 @generic_setattrat(%struct.fd* %37, i8* %15, i32 %40, i32 1)
  store i32 %41, i32* %4, align 4
  store i32 1, i32* %10, align 4
  br label %42

42:                                               ; preds = %32, %30, %20
  %43 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %43)
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @user_read_string(i32, i8*, i32) #2

declare dso_local i32 @STRACE(i8*, i32, i8*, i32) #2

declare dso_local %struct.fd* @at_fd(i32) #2

declare dso_local i32 @generic_setattrat(%struct.fd*, i8*, i32, i32) #2

declare dso_local i32 @make_attr(i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
